SimGrid (3.7) unstable; urgency=medium


 -- `LC_ALL=C date` Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.6) stable; urgency=medium

 The Summer Release, also known as the "F*! They Killed Kenny!" version

 Java and Ruby: 
 * Bindings now constitute their own package, separated from the main one.
   Rationale: reduce our maintainance nightmare by reducing the module coupling
   They will soon be released on their own on gforge. 
 * In the meanwhile:
   svn co svn://scm.gforge.inria.fr/svn/simgrid/contrib/trunk/simgrid-java
   svn co svn://scm.gforge.inria.fr/svn/simgrid/contrib/trunk/simgrid-ruby
 
 GRAS: It is not considered as stable anymore, but experimental. Sorry.
 * It's not quite deprecated for now because we have no replacement,
   but it may soon become the case.

 SMPI
 * New MPI functions supported: MPI_Comm_disconnect, MPI_Comm_get_name
 * Fortran: New user-level cache variable to store the rank of the running
   process. This improves performance by an order of magnitude.
 * C: New coccinelle script to automatically locate and modifiy global and
   local static variables.
 * Improved SMPI network model with a sender-side gap to account for multiple
   parallel sends.

 MSG
 * New function MSG_comm_get_status(). MSG_comm_test() and MSG_comm_testany()
   only say if a communication is finished, no matter whether it succeeded or
   failed. You can call MSG_comm_get_status() to know the status of a finished
   communication.
 * New function MSG_task_dsend() to send a task and detach it. When a
   communication is detached, you are never notified of its success or failure
   and the memory is released automatically once it is finished. This function
   is useful when you don't care about the end nor the success of a
   communication.
 * Change the prototypes of action replay. Sorry for inconvenience,
   but this is really more efficient this way (and to adapt your code,